Add answer to anomalies question

--- a/Project/ECE326_Project_PRA01_shaocass.ipynb
+++ b/Project/ECE326_Project_PRA01_shaocass.ipynb
@@ -29,6 +29,9 @@
         "**Choose a dataset, provide a reason why you chose that dataset.**  \n",
         "The dataset that I chose is called efron_morris75. The TensorFlow website states that this data represents “The batting averages of 18 Major League Baseball players through their first 45 at-bats of the 1970 season, along with their batting average for the remainder of the season”. I chose this dataset because there are various parameters (e.g., batting average, hits, remaining average, season average, season hits) that make interesting graphs. I was also interested to see if I could spot patterns/relationships between various parameters (e.g., between batting average, remaining average, and season average).  \n",
         "\n",
+        "**What anomalies did you filter out, and why?**  \n",
+        "There were no anomalies in the dataset. There were 18 entries and all contained valid data (i.e., nothing missing/nothing deviated from the norm).\n",
+        "\n",
         "**Do you think TensorFlow can be used to implement a spell-checker? Explain.**  \n",
         "A spell-checker can be implemented without machine learning or TensorFlow. TensorFlow can be used to implement a spell-checker, although it is not necessary. Similarly as done in lab 3, a spell-checker can be implemented with TensorFlow by loading the data and checking if a word is found in the data of correctly spelled words. TensorFlow can further enhance the spell-checker. It can use machine learning to learn common misspellings of words to perform autocorrect. It can also use machine learning to perform grammar-checking in addition to spell-checking.\n"
       ],
@@ -129,7 +132,7 @@
         "id": "bxdFarD-oRaw",
         "outputId": "016c0d3b-fbed-4161-fce4-4634814f5214"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
